Spot Fix: z-index

--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -29,5 +29,5 @@
 }
 
 .sticky-top {
-    z-index:0;
+    z-index:40;
 }
